<resources>
    <string name="app_name">MovieInfo</string>
    <string name="action_settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="now_showing">Now Showing</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet">No Network Available !</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="sample_title">Everest (2014)</string>
    <string name="date_release">Release Date</string>
    <string name="sample_date">2015-10-30</string>
    <string name="language">Language</string>
    <string name="overview">Overview:</string>
    <string name="trailers">Trailers</string>
    <string name="related_movie">Related movies</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="remove_favorite">Removed from Favorite!</string>
    <string name="rating">Rating</string>
    <string name="sample_rating">8.5</string>
    <string name="added_to_favorite">Added to Favorite!</string>
    <string name="in_favorite">In Favorite</string>
    <string name="not_in_favorite">Not in Favorite</string>
    <string name="discover">Discover</string>
    <string name="no_item">No item available!</string>
    <string name="open_video">Open Trailer!</string>
</resources>
