<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_color"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:paddingBottom="@dimen/activity_vertical_margin"

        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_movie_detail"
        tools:context="com.example.khue.movieinfo.MovieDetailActivity"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/image_backdrop"
            android:src="@drawable/ic_movie_icon_2"
            android:scaleType="centerCrop"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/movie_background_color"
            >
            <ImageView
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:id="@+id/image_poster"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_movie_icon_2"
                android:scaleType="centerCrop"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_title"
                android:text="@string/sample_title"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/image_poster"
                android:layout_toEndOf="@+id/image_poster"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/movie_title_color"
                android:textSize="@dimen/text_large"
                />
            <ToggleButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@android:drawable/btn_star_big_on"
                android:layout_below="@+id/text_title"
                android:layout_toRightOf="@+id/image_poster"
                android:layout_toEndOf="@+id/image_poster"
                android:layout_marginTop="@dimen/normal_margin"
                android:src="@android:drawable/btn_star_big_on"
                android:textOff=""
                android:textOn=""
                android:id="@+id/toggle_favorite"
                android:layout_centerVertical="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_favorite"
                android:text="@string/add_to_favorite"

                android:textColor="@android:color/white"
                android:textSize="@dimen/text_normal"

                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/toggle_favorite"
                android:layout_toEndOf="@+id/toggle_favorite" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/movie_info_color"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"

            android:paddingBottom="@dimen/activity_vertical_margin"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_release"
                android:layout_alignParentLeft="true"
                android:id="@+id/label_date_release"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_date"
                android:id="@+id/text_date_release"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/text_normal"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/label_date_release"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold"
                android:id="@+id/label_language"
                android:layout_marginTop="@dimen/small_margin"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_date"
                android:id="@+id/text_language"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/text_date_release"
                android:textSize="@dimen/text_normal"
                android:layout_marginTop="@dimen/small_margin"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/label_language"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/small_margin"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_rating"
                android:id="@+id/text_vote"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/text_language"
                android:textSize="@dimen/text_normal"
                android:layout_marginTop="@dimen/small_margin"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"

            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/normal_margin"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_overview"
                android:textSize="@dimen/text_normal"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trailers"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/normal_margin"

                />

            <GridView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnWidth="150dp"
                android:numColumns="auto_fit"

                android:horizontalSpacing="10dp"
                android:verticalSpacing="10dp"
                android:stretchMode="columnWidth"
                android:id="@+id/gridview_trailer"
                android:background="@color/movie_info_color"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/related_movie"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/normal_margin"

                />
            <GridView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnWidth="150dp"
                android:numColumns="auto_fit"

                android:horizontalSpacing="10dp"
                android:verticalSpacing="10dp"
                android:stretchMode="columnWidth"
                android:id="@+id/gridview_related_movie"
                android:background="@color/movie_info_color"
                >

            </GridView>
        </LinearLayout>

    </LinearLayout>
</ScrollView>


